deploy: eb9e0164ff561496e10f96a26451706d4faa8b15

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:41.202711Z",
-     "iopub.status.busy": "2025-07-24T14:29:41.202485Z",
-     "iopub.status.idle": "2025-07-24T14:29:42.150100Z",
-     "shell.execute_reply": "2025-07-24T14:29:42.149474Z"
+     "iopub.execute_input": "2025-07-24T14:37:36.464691Z",
+     "iopub.status.busy": "2025-07-24T14:37:36.464511Z",
+     "iopub.status.idle": "2025-07-24T14:37:37.397325Z",
+     "shell.execute_reply": "2025-07-24T14:37:37.396825Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:42.152730Z",
-     "iopub.status.busy": "2025-07-24T14:29:42.152379Z",
-     "iopub.status.idle": "2025-07-24T14:29:42.471159Z",
-     "shell.execute_reply": "2025-07-24T14:29:42.470585Z"
+     "iopub.execute_input": "2025-07-24T14:37:37.399134Z",
+     "iopub.status.busy": "2025-07-24T14:37:37.398902Z",
+     "iopub.status.idle": "2025-07-24T14:37:37.704998Z",
+     "shell.execute_reply": "2025-07-24T14:37:37.704490Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:42.472812Z",
-     "iopub.status.busy": "2025-07-24T14:29:42.472651Z",
-     "iopub.status.idle": "2025-07-24T14:29:42.611444Z",
-     "shell.execute_reply": "2025-07-24T14:29:42.610852Z"
+     "iopub.execute_input": "2025-07-24T14:37:37.706599Z",
+     "iopub.status.busy": "2025-07-24T14:37:37.706409Z",
+     "iopub.status.idle": "2025-07-24T14:37:37.843182Z",
+     "shell.execute_reply": "2025-07-24T14:37:37.842580Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:42.613112Z",
-     "iopub.status.busy": "2025-07-24T14:29:42.612948Z",
-     "iopub.status.idle": "2025-07-24T14:29:43.013116Z",
-     "shell.execute_reply": "2025-07-24T14:29:43.012535Z"
+     "iopub.execute_input": "2025-07-24T14:37:37.844782Z",
+     "iopub.status.busy": "2025-07-24T14:37:37.844610Z",
+     "iopub.status.idle": "2025-07-24T14:37:38.237003Z",
+     "shell.execute_reply": "2025-07-24T14:37:38.236436Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:43.014752Z",
-     "iopub.status.busy": "2025-07-24T14:29:43.014589Z",
-     "iopub.status.idle": "2025-07-24T14:29:43.304785Z",
-     "shell.execute_reply": "2025-07-24T14:29:43.304275Z"
+     "iopub.execute_input": "2025-07-24T14:37:38.238668Z",
+     "iopub.status.busy": "2025-07-24T14:37:38.238472Z",
+     "iopub.status.idle": "2025-07-24T14:37:38.520398Z",
+     "shell.execute_reply": "2025-07-24T14:37:38.519905Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:43.306468Z",
-     "iopub.status.busy": "2025-07-24T14:29:43.306290Z",
-     "iopub.status.idle": "2025-07-24T14:29:43.308542Z",
-     "shell.execute_reply": "2025-07-24T14:29:43.308117Z"
+     "iopub.execute_input": "2025-07-24T14:37:38.522048Z",
+     "iopub.status.busy": "2025-07-24T14:37:38.521891Z",
+     "iopub.status.idle": "2025-07-24T14:37:38.524028Z",
+     "shell.execute_reply": "2025-07-24T14:37:38.523584Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:43.310011Z",
-     "iopub.status.busy": "2025-07-24T14:29:43.309827Z",
-     "iopub.status.idle": "2025-07-24T14:29:43.312713Z",
-     "shell.execute_reply": "2025-07-24T14:29:43.312184Z"
+     "iopub.execute_input": "2025-07-24T14:37:38.525500Z",
+     "iopub.status.busy": "2025-07-24T14:37:38.525350Z",
+     "iopub.status.idle": "2025-07-24T14:37:38.527903Z",
+     "shell.execute_reply": "2025-07-24T14:37:38.527462Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:43.314194Z",
-     "iopub.status.busy": "2025-07-24T14:29:43.314043Z",
-     "iopub.status.idle": "2025-07-24T14:29:44.537443Z",
-     "shell.execute_reply": "2025-07-24T14:29:44.536987Z"
+     "iopub.execute_input": "2025-07-24T14:37:38.529381Z",
+     "iopub.status.busy": "2025-07-24T14:37:38.529227Z",
+     "iopub.status.idle": "2025-07-24T14:37:39.702307Z",
+     "shell.execute_reply": "2025-07-24T14:37:39.701693Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpaUDgVh\", R: \"/tmp/RtmpQ0flBV\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpxps9Rz\", R: \"/tmp/RtmpsjD9Lw\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -470,7 +470,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mPackageNotInstalledError\u001b[39m                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrpy2\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mrobjects\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pandas2ri\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrpy2\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mrobjects\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpackages\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m importr\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m sr = \u001b[43mimportr\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mSPEI\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m pandas2ri.converter.context(): \u001b[38;5;66;03m# pandas2ri.activate()\u001b[39;00m\n\u001b[32m      7\u001b[39m     spir_res = sr.spi(prec_rsum.values, scale=\u001b[32m3\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrpy2\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mrobjects\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m pandas2ri\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mrpy2\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mrobjects\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpackages\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m importr\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m sr = \u001b[43mimportr\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mSPEI\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m pandas2ri.converter.context():  \u001b[38;5;66;03m# pandas2ri.activate()\u001b[39;00m\n\u001b[32m      7\u001b[39m     spir_res = sr.spi(prec_rsum.values, scale=\u001b[32m3\u001b[39m)\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/robjects/packages.py:472\u001b[39m, in \u001b[36mimportr\u001b[39m\u001b[34m(name, lib_loc, robject_translations, signature_translation, suppress_messages, on_conflict, symbol_r2python, symbol_resolve, data)\u001b[39m\n\u001b[32m    440\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\" Import an R package.\u001b[39;00m\n\u001b[32m    441\u001b[39m \n\u001b[32m    442\u001b[39m \u001b[33;03mArguments:\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m    468\u001b[39m \n\u001b[32m    469\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    471\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m isinstalled(name, lib_loc=lib_loc):\n\u001b[32m--> \u001b[39m\u001b[32m472\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m PackageNotInstalledError(\n\u001b[32m    473\u001b[39m         \u001b[33m'\u001b[39m\u001b[33mThe R package \u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m is not installed.\u001b[39m\u001b[33m'\u001b[39m % name\n\u001b[32m    474\u001b[39m     )\n\u001b[32m    476\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m suppress_messages:\n\u001b[32m    477\u001b[39m     ok = quiet_require(name, lib_loc=lib_loc)\n",
       "\u001b[31mPackageNotInstalledError\u001b[39m: The R package \"SPEI\" is not installed."
      ]
@@ -482,7 +482,7 @@
     "\n",
     "sr = importr(\"SPEI\")\n",
     "\n",
-    "with pandas2ri.converter.context(): # pandas2ri.activate()\n",
+    "with pandas2ri.converter.context():  # pandas2ri.activate()\n",
     "    spir_res = sr.spi(prec_rsum.values, scale=3)\n",
     "\n",
     "r_spi = pd.Series(spir_res[2].ravel(), index=prec_rsum.index, name=\"SPI\")\n",
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:44.539094Z",
-     "iopub.status.busy": "2025-07-24T14:29:44.538940Z",
-     "iopub.status.idle": "2025-07-24T14:29:44.948570Z",
-     "shell.execute_reply": "2025-07-24T14:29:44.948003Z"
+     "iopub.execute_input": "2025-07-24T14:37:39.704000Z",
+     "iopub.status.busy": "2025-07-24T14:37:39.703832Z",
+     "iopub.status.idle": "2025-07-24T14:37:40.103145Z",
+     "shell.execute_reply": "2025-07-24T14:37:40.102602Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:44.950486Z",
-     "iopub.status.busy": "2025-07-24T14:29:44.950260Z",
-     "iopub.status.idle": "2025-07-24T14:29:45.264602Z",
-     "shell.execute_reply": "2025-07-24T14:29:45.264055Z"
+     "iopub.execute_input": "2025-07-24T14:37:40.104812Z",
+     "iopub.status.busy": "2025-07-24T14:37:40.104658Z",
+     "iopub.status.idle": "2025-07-24T14:37:40.414696Z",
+     "shell.execute_reply": "2025-07-24T14:37:40.414088Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:45.266174Z",
-     "iopub.status.busy": "2025-07-24T14:29:45.266016Z",
-     "iopub.status.idle": "2025-07-24T14:29:45.273228Z",
-     "shell.execute_reply": "2025-07-24T14:29:45.272636Z"
+     "iopub.execute_input": "2025-07-24T14:37:40.416304Z",
+     "iopub.status.busy": "2025-07-24T14:37:40.416147Z",
+     "iopub.status.idle": "2025-07-24T14:37:40.423378Z",
+     "shell.execute_reply": "2025-07-24T14:37:40.422808Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:29:45.274699Z",
-     "iopub.status.busy": "2025-07-24T14:29:45.274542Z",
-     "iopub.status.idle": "2025-07-24T14:29:45.693951Z",
-     "shell.execute_reply": "2025-07-24T14:29:45.693447Z"
+     "iopub.execute_input": "2025-07-24T14:37:40.424859Z",
+     "iopub.status.busy": "2025-07-24T14:37:40.424700Z",
+     "iopub.status.idle": "2025-07-24T14:37:40.837094Z",
+     "shell.execute_reply": "2025-07-24T14:37:40.836466Z"
     }
    },
    "outputs": [
