deploy: 48a420b45a3fb24f67d8bc8709f77ce2b8044345

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:36.464691Z",
-     "iopub.status.busy": "2025-07-24T14:37:36.464511Z",
-     "iopub.status.idle": "2025-07-24T14:37:37.397325Z",
-     "shell.execute_reply": "2025-07-24T14:37:37.396825Z"
+     "iopub.execute_input": "2025-07-24T14:50:36.934584Z",
+     "iopub.status.busy": "2025-07-24T14:50:36.934421Z",
+     "iopub.status.idle": "2025-07-24T14:50:37.904778Z",
+     "shell.execute_reply": "2025-07-24T14:50:37.904194Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:37.399134Z",
-     "iopub.status.busy": "2025-07-24T14:37:37.398902Z",
-     "iopub.status.idle": "2025-07-24T14:37:37.704998Z",
-     "shell.execute_reply": "2025-07-24T14:37:37.704490Z"
+     "iopub.execute_input": "2025-07-24T14:50:37.906621Z",
+     "iopub.status.busy": "2025-07-24T14:50:37.906347Z",
+     "iopub.status.idle": "2025-07-24T14:50:38.233787Z",
+     "shell.execute_reply": "2025-07-24T14:50:38.233273Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:37.706599Z",
-     "iopub.status.busy": "2025-07-24T14:37:37.706409Z",
-     "iopub.status.idle": "2025-07-24T14:37:37.843182Z",
-     "shell.execute_reply": "2025-07-24T14:37:37.842580Z"
+     "iopub.execute_input": "2025-07-24T14:50:38.235410Z",
+     "iopub.status.busy": "2025-07-24T14:50:38.235218Z",
+     "iopub.status.idle": "2025-07-24T14:50:38.375486Z",
+     "shell.execute_reply": "2025-07-24T14:50:38.374825Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:37.844782Z",
-     "iopub.status.busy": "2025-07-24T14:37:37.844610Z",
-     "iopub.status.idle": "2025-07-24T14:37:38.237003Z",
-     "shell.execute_reply": "2025-07-24T14:37:38.236436Z"
+     "iopub.execute_input": "2025-07-24T14:50:38.377257Z",
+     "iopub.status.busy": "2025-07-24T14:50:38.377087Z",
+     "iopub.status.idle": "2025-07-24T14:50:38.780015Z",
+     "shell.execute_reply": "2025-07-24T14:50:38.779469Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:38.238668Z",
-     "iopub.status.busy": "2025-07-24T14:37:38.238472Z",
-     "iopub.status.idle": "2025-07-24T14:37:38.520398Z",
-     "shell.execute_reply": "2025-07-24T14:37:38.519905Z"
+     "iopub.execute_input": "2025-07-24T14:50:38.781805Z",
+     "iopub.status.busy": "2025-07-24T14:50:38.781647Z",
+     "iopub.status.idle": "2025-07-24T14:50:39.073471Z",
+     "shell.execute_reply": "2025-07-24T14:50:39.072840Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:38.522048Z",
-     "iopub.status.busy": "2025-07-24T14:37:38.521891Z",
-     "iopub.status.idle": "2025-07-24T14:37:38.524028Z",
-     "shell.execute_reply": "2025-07-24T14:37:38.523584Z"
+     "iopub.execute_input": "2025-07-24T14:50:39.075221Z",
+     "iopub.status.busy": "2025-07-24T14:50:39.075034Z",
+     "iopub.status.idle": "2025-07-24T14:50:39.077655Z",
+     "shell.execute_reply": "2025-07-24T14:50:39.077058Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:38.525500Z",
-     "iopub.status.busy": "2025-07-24T14:37:38.525350Z",
-     "iopub.status.idle": "2025-07-24T14:37:38.527903Z",
-     "shell.execute_reply": "2025-07-24T14:37:38.527462Z"
+     "iopub.execute_input": "2025-07-24T14:50:39.079247Z",
+     "iopub.status.busy": "2025-07-24T14:50:39.079072Z",
+     "iopub.status.idle": "2025-07-24T14:50:39.082048Z",
+     "shell.execute_reply": "2025-07-24T14:50:39.081482Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:38.529381Z",
-     "iopub.status.busy": "2025-07-24T14:37:38.529227Z",
-     "iopub.status.idle": "2025-07-24T14:37:39.702307Z",
-     "shell.execute_reply": "2025-07-24T14:37:39.701693Z"
+     "iopub.execute_input": "2025-07-24T14:50:39.083623Z",
+     "iopub.status.busy": "2025-07-24T14:50:39.083460Z",
+     "iopub.status.idle": "2025-07-24T14:50:40.242777Z",
+     "shell.execute_reply": "2025-07-24T14:50:40.242272Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpxps9Rz\", R: \"/tmp/RtmpsjD9Lw\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpnQ93hA\", R: \"/tmp/RtmpVVFqMz\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:39.704000Z",
-     "iopub.status.busy": "2025-07-24T14:37:39.703832Z",
-     "iopub.status.idle": "2025-07-24T14:37:40.103145Z",
-     "shell.execute_reply": "2025-07-24T14:37:40.102602Z"
+     "iopub.execute_input": "2025-07-24T14:50:40.244624Z",
+     "iopub.status.busy": "2025-07-24T14:50:40.244455Z",
+     "iopub.status.idle": "2025-07-24T14:50:40.664086Z",
+     "shell.execute_reply": "2025-07-24T14:50:40.663488Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:40.104812Z",
-     "iopub.status.busy": "2025-07-24T14:37:40.104658Z",
-     "iopub.status.idle": "2025-07-24T14:37:40.414696Z",
-     "shell.execute_reply": "2025-07-24T14:37:40.414088Z"
+     "iopub.execute_input": "2025-07-24T14:50:40.665799Z",
+     "iopub.status.busy": "2025-07-24T14:50:40.665633Z",
+     "iopub.status.idle": "2025-07-24T14:50:40.986522Z",
+     "shell.execute_reply": "2025-07-24T14:50:40.985898Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:40.416304Z",
-     "iopub.status.busy": "2025-07-24T14:37:40.416147Z",
-     "iopub.status.idle": "2025-07-24T14:37:40.423378Z",
-     "shell.execute_reply": "2025-07-24T14:37:40.422808Z"
+     "iopub.execute_input": "2025-07-24T14:50:40.988137Z",
+     "iopub.status.busy": "2025-07-24T14:50:40.987966Z",
+     "iopub.status.idle": "2025-07-24T14:50:40.995773Z",
+     "shell.execute_reply": "2025-07-24T14:50:40.995288Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:37:40.424859Z",
-     "iopub.status.busy": "2025-07-24T14:37:40.424700Z",
-     "iopub.status.idle": "2025-07-24T14:37:40.837094Z",
-     "shell.execute_reply": "2025-07-24T14:37:40.836466Z"
+     "iopub.execute_input": "2025-07-24T14:50:40.997348Z",
+     "iopub.status.busy": "2025-07-24T14:50:40.997180Z",
+     "iopub.status.idle": "2025-07-24T14:50:41.419702Z",
+     "shell.execute_reply": "2025-07-24T14:50:41.419105Z"
     }
    },
    "outputs": [
