--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:36.934584Z",
-     "iopub.status.busy": "2025-07-24T14:50:36.934421Z",
-     "iopub.status.idle": "2025-07-24T14:50:37.904778Z",
-     "shell.execute_reply": "2025-07-24T14:50:37.904194Z"
+     "iopub.execute_input": "2025-07-24T14:59:09.099014Z",
+     "iopub.status.busy": "2025-07-24T14:59:09.098733Z",
+     "iopub.status.idle": "2025-07-24T14:59:10.129049Z",
+     "shell.execute_reply": "2025-07-24T14:59:10.128485Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:37.906621Z",
-     "iopub.status.busy": "2025-07-24T14:50:37.906347Z",
-     "iopub.status.idle": "2025-07-24T14:50:38.233787Z",
-     "shell.execute_reply": "2025-07-24T14:50:38.233273Z"
+     "iopub.execute_input": "2025-07-24T14:59:10.130943Z",
+     "iopub.status.busy": "2025-07-24T14:59:10.130677Z",
+     "iopub.status.idle": "2025-07-24T14:59:10.474606Z",
+     "shell.execute_reply": "2025-07-24T14:59:10.473948Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:38.235410Z",
-     "iopub.status.busy": "2025-07-24T14:50:38.235218Z",
-     "iopub.status.idle": "2025-07-24T14:50:38.375486Z",
-     "shell.execute_reply": "2025-07-24T14:50:38.374825Z"
+     "iopub.execute_input": "2025-07-24T14:59:10.476483Z",
+     "iopub.status.busy": "2025-07-24T14:59:10.476299Z",
+     "iopub.status.idle": "2025-07-24T14:59:10.618090Z",
+     "shell.execute_reply": "2025-07-24T14:59:10.617447Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:38.377257Z",
-     "iopub.status.busy": "2025-07-24T14:50:38.377087Z",
-     "iopub.status.idle": "2025-07-24T14:50:38.780015Z",
-     "shell.execute_reply": "2025-07-24T14:50:38.779469Z"
+     "iopub.execute_input": "2025-07-24T14:59:10.619850Z",
+     "iopub.status.busy": "2025-07-24T14:59:10.619669Z",
+     "iopub.status.idle": "2025-07-24T14:59:11.016304Z",
+     "shell.execute_reply": "2025-07-24T14:59:11.015648Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:38.781805Z",
-     "iopub.status.busy": "2025-07-24T14:50:38.781647Z",
-     "iopub.status.idle": "2025-07-24T14:50:39.073471Z",
-     "shell.execute_reply": "2025-07-24T14:50:39.072840Z"
+     "iopub.execute_input": "2025-07-24T14:59:11.018120Z",
+     "iopub.status.busy": "2025-07-24T14:59:11.017943Z",
+     "iopub.status.idle": "2025-07-24T14:59:11.316046Z",
+     "shell.execute_reply": "2025-07-24T14:59:11.315454Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:39.075221Z",
-     "iopub.status.busy": "2025-07-24T14:50:39.075034Z",
-     "iopub.status.idle": "2025-07-24T14:50:39.077655Z",
-     "shell.execute_reply": "2025-07-24T14:50:39.077058Z"
+     "iopub.execute_input": "2025-07-24T14:59:11.317945Z",
+     "iopub.status.busy": "2025-07-24T14:59:11.317760Z",
+     "iopub.status.idle": "2025-07-24T14:59:11.320189Z",
+     "shell.execute_reply": "2025-07-24T14:59:11.319699Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:39.079247Z",
-     "iopub.status.busy": "2025-07-24T14:50:39.079072Z",
-     "iopub.status.idle": "2025-07-24T14:50:39.082048Z",
-     "shell.execute_reply": "2025-07-24T14:50:39.081482Z"
+     "iopub.execute_input": "2025-07-24T14:59:11.321850Z",
+     "iopub.status.busy": "2025-07-24T14:59:11.321682Z",
+     "iopub.status.idle": "2025-07-24T14:59:11.324644Z",
+     "shell.execute_reply": "2025-07-24T14:59:11.324111Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:39.083623Z",
-     "iopub.status.busy": "2025-07-24T14:50:39.083460Z",
-     "iopub.status.idle": "2025-07-24T14:50:40.242777Z",
-     "shell.execute_reply": "2025-07-24T14:50:40.242272Z"
+     "iopub.execute_input": "2025-07-24T14:59:11.326439Z",
+     "iopub.status.busy": "2025-07-24T14:59:11.326261Z",
+     "iopub.status.idle": "2025-07-24T14:59:12.457030Z",
+     "shell.execute_reply": "2025-07-24T14:59:12.456369Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpnQ93hA\", R: \"/tmp/RtmpVVFqMz\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpeaCLEd\", R: \"/tmp/RtmppDUyTj\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:40.244624Z",
-     "iopub.status.busy": "2025-07-24T14:50:40.244455Z",
-     "iopub.status.idle": "2025-07-24T14:50:40.664086Z",
-     "shell.execute_reply": "2025-07-24T14:50:40.663488Z"
+     "iopub.execute_input": "2025-07-24T14:59:12.458985Z",
+     "iopub.status.busy": "2025-07-24T14:59:12.458797Z",
+     "iopub.status.idle": "2025-07-24T14:59:12.890080Z",
+     "shell.execute_reply": "2025-07-24T14:59:12.889449Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:40.665799Z",
-     "iopub.status.busy": "2025-07-24T14:50:40.665633Z",
-     "iopub.status.idle": "2025-07-24T14:50:40.986522Z",
-     "shell.execute_reply": "2025-07-24T14:50:40.985898Z"
+     "iopub.execute_input": "2025-07-24T14:59:12.891880Z",
+     "iopub.status.busy": "2025-07-24T14:59:12.891706Z",
+     "iopub.status.idle": "2025-07-24T14:59:13.219735Z",
+     "shell.execute_reply": "2025-07-24T14:59:13.219065Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:40.988137Z",
-     "iopub.status.busy": "2025-07-24T14:50:40.987966Z",
-     "iopub.status.idle": "2025-07-24T14:50:40.995773Z",
-     "shell.execute_reply": "2025-07-24T14:50:40.995288Z"
+     "iopub.execute_input": "2025-07-24T14:59:13.221559Z",
+     "iopub.status.busy": "2025-07-24T14:59:13.221364Z",
+     "iopub.status.idle": "2025-07-24T14:59:13.229309Z",
+     "shell.execute_reply": "2025-07-24T14:59:13.228710Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:50:40.997348Z",
-     "iopub.status.busy": "2025-07-24T14:50:40.997180Z",
-     "iopub.status.idle": "2025-07-24T14:50:41.419702Z",
-     "shell.execute_reply": "2025-07-24T14:50:41.419105Z"
+     "iopub.execute_input": "2025-07-24T14:59:13.230883Z",
+     "iopub.status.busy": "2025-07-24T14:59:13.230725Z",
+     "iopub.status.idle": "2025-07-24T14:59:13.652236Z",
+     "shell.execute_reply": "2025-07-24T14:59:13.651603Z"
     }
    },
    "outputs": [
