deploy: 38da8e30694b4e02bd2a4aa9aa03e9c14617bc91

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:09.099014Z",
-     "iopub.status.busy": "2025-07-24T14:59:09.098733Z",
-     "iopub.status.idle": "2025-07-24T14:59:10.129049Z",
-     "shell.execute_reply": "2025-07-24T14:59:10.128485Z"
+     "iopub.execute_input": "2025-07-24T15:09:07.541731Z",
+     "iopub.status.busy": "2025-07-24T15:09:07.541565Z",
+     "iopub.status.idle": "2025-07-24T15:09:08.518342Z",
+     "shell.execute_reply": "2025-07-24T15:09:08.517812Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:10.130943Z",
-     "iopub.status.busy": "2025-07-24T14:59:10.130677Z",
-     "iopub.status.idle": "2025-07-24T14:59:10.474606Z",
-     "shell.execute_reply": "2025-07-24T14:59:10.473948Z"
+     "iopub.execute_input": "2025-07-24T15:09:08.520189Z",
+     "iopub.status.busy": "2025-07-24T15:09:08.519948Z",
+     "iopub.status.idle": "2025-07-24T15:09:08.854146Z",
+     "shell.execute_reply": "2025-07-24T15:09:08.853575Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:10.476483Z",
-     "iopub.status.busy": "2025-07-24T14:59:10.476299Z",
-     "iopub.status.idle": "2025-07-24T14:59:10.618090Z",
-     "shell.execute_reply": "2025-07-24T14:59:10.617447Z"
+     "iopub.execute_input": "2025-07-24T15:09:08.855784Z",
+     "iopub.status.busy": "2025-07-24T15:09:08.855608Z",
+     "iopub.status.idle": "2025-07-24T15:09:08.994624Z",
+     "shell.execute_reply": "2025-07-24T15:09:08.994002Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:10.619850Z",
-     "iopub.status.busy": "2025-07-24T14:59:10.619669Z",
-     "iopub.status.idle": "2025-07-24T14:59:11.016304Z",
-     "shell.execute_reply": "2025-07-24T14:59:11.015648Z"
+     "iopub.execute_input": "2025-07-24T15:09:08.996410Z",
+     "iopub.status.busy": "2025-07-24T15:09:08.996212Z",
+     "iopub.status.idle": "2025-07-24T15:09:09.396487Z",
+     "shell.execute_reply": "2025-07-24T15:09:09.395922Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:11.018120Z",
-     "iopub.status.busy": "2025-07-24T14:59:11.017943Z",
-     "iopub.status.idle": "2025-07-24T14:59:11.316046Z",
-     "shell.execute_reply": "2025-07-24T14:59:11.315454Z"
+     "iopub.execute_input": "2025-07-24T15:09:09.398149Z",
+     "iopub.status.busy": "2025-07-24T15:09:09.397981Z",
+     "iopub.status.idle": "2025-07-24T15:09:09.682676Z",
+     "shell.execute_reply": "2025-07-24T15:09:09.682156Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:11.317945Z",
-     "iopub.status.busy": "2025-07-24T14:59:11.317760Z",
-     "iopub.status.idle": "2025-07-24T14:59:11.320189Z",
-     "shell.execute_reply": "2025-07-24T14:59:11.319699Z"
+     "iopub.execute_input": "2025-07-24T15:09:09.684301Z",
+     "iopub.status.busy": "2025-07-24T15:09:09.684134Z",
+     "iopub.status.idle": "2025-07-24T15:09:09.686261Z",
+     "shell.execute_reply": "2025-07-24T15:09:09.685831Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:11.321850Z",
-     "iopub.status.busy": "2025-07-24T14:59:11.321682Z",
-     "iopub.status.idle": "2025-07-24T14:59:11.324644Z",
-     "shell.execute_reply": "2025-07-24T14:59:11.324111Z"
+     "iopub.execute_input": "2025-07-24T15:09:09.687783Z",
+     "iopub.status.busy": "2025-07-24T15:09:09.687631Z",
+     "iopub.status.idle": "2025-07-24T15:09:09.690078Z",
+     "shell.execute_reply": "2025-07-24T15:09:09.689633Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:11.326439Z",
-     "iopub.status.busy": "2025-07-24T14:59:11.326261Z",
-     "iopub.status.idle": "2025-07-24T14:59:12.457030Z",
-     "shell.execute_reply": "2025-07-24T14:59:12.456369Z"
+     "iopub.execute_input": "2025-07-24T15:09:09.691536Z",
+     "iopub.status.busy": "2025-07-24T15:09:09.691383Z",
+     "iopub.status.idle": "2025-07-24T15:09:10.858881Z",
+     "shell.execute_reply": "2025-07-24T15:09:10.858349Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpeaCLEd\", R: \"/tmp/RtmppDUyTj\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpI1YZMT\", R: \"/tmp/RtmpjzhISL\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:12.458985Z",
-     "iopub.status.busy": "2025-07-24T14:59:12.458797Z",
-     "iopub.status.idle": "2025-07-24T14:59:12.890080Z",
-     "shell.execute_reply": "2025-07-24T14:59:12.889449Z"
+     "iopub.execute_input": "2025-07-24T15:09:10.860730Z",
+     "iopub.status.busy": "2025-07-24T15:09:10.860563Z",
+     "iopub.status.idle": "2025-07-24T15:09:11.297623Z",
+     "shell.execute_reply": "2025-07-24T15:09:11.296995Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:12.891880Z",
-     "iopub.status.busy": "2025-07-24T14:59:12.891706Z",
-     "iopub.status.idle": "2025-07-24T14:59:13.219735Z",
-     "shell.execute_reply": "2025-07-24T14:59:13.219065Z"
+     "iopub.execute_input": "2025-07-24T15:09:11.299414Z",
+     "iopub.status.busy": "2025-07-24T15:09:11.299221Z",
+     "iopub.status.idle": "2025-07-24T15:09:11.633015Z",
+     "shell.execute_reply": "2025-07-24T15:09:11.632409Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:13.221559Z",
-     "iopub.status.busy": "2025-07-24T14:59:13.221364Z",
-     "iopub.status.idle": "2025-07-24T14:59:13.229309Z",
-     "shell.execute_reply": "2025-07-24T14:59:13.228710Z"
+     "iopub.execute_input": "2025-07-24T15:09:11.634630Z",
+     "iopub.status.busy": "2025-07-24T15:09:11.634464Z",
+     "iopub.status.idle": "2025-07-24T15:09:11.641898Z",
+     "shell.execute_reply": "2025-07-24T15:09:11.641449Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T14:59:13.230883Z",
-     "iopub.status.busy": "2025-07-24T14:59:13.230725Z",
-     "iopub.status.idle": "2025-07-24T14:59:13.652236Z",
-     "shell.execute_reply": "2025-07-24T14:59:13.651603Z"
+     "iopub.execute_input": "2025-07-24T15:09:11.643405Z",
+     "iopub.status.busy": "2025-07-24T15:09:11.643219Z",
+     "iopub.status.idle": "2025-07-24T15:09:12.073780Z",
+     "shell.execute_reply": "2025-07-24T15:09:12.073155Z"
     }
    },
    "outputs": [
