deploy: d05d3e38d630c3d686bbd42b58456fe149ee7704

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:07.541731Z",
-     "iopub.status.busy": "2025-07-24T15:09:07.541565Z",
-     "iopub.status.idle": "2025-07-24T15:09:08.518342Z",
-     "shell.execute_reply": "2025-07-24T15:09:08.517812Z"
+     "iopub.execute_input": "2025-07-24T15:25:16.432206Z",
+     "iopub.status.busy": "2025-07-24T15:25:16.431929Z",
+     "iopub.status.idle": "2025-07-24T15:25:17.396742Z",
+     "shell.execute_reply": "2025-07-24T15:25:17.396128Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:08.520189Z",
-     "iopub.status.busy": "2025-07-24T15:09:08.519948Z",
-     "iopub.status.idle": "2025-07-24T15:09:08.854146Z",
-     "shell.execute_reply": "2025-07-24T15:09:08.853575Z"
+     "iopub.execute_input": "2025-07-24T15:25:17.398641Z",
+     "iopub.status.busy": "2025-07-24T15:25:17.398400Z",
+     "iopub.status.idle": "2025-07-24T15:25:17.716607Z",
+     "shell.execute_reply": "2025-07-24T15:25:17.716013Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:08.855784Z",
-     "iopub.status.busy": "2025-07-24T15:09:08.855608Z",
-     "iopub.status.idle": "2025-07-24T15:09:08.994624Z",
-     "shell.execute_reply": "2025-07-24T15:09:08.994002Z"
+     "iopub.execute_input": "2025-07-24T15:25:17.718360Z",
+     "iopub.status.busy": "2025-07-24T15:25:17.718168Z",
+     "iopub.status.idle": "2025-07-24T15:25:17.858232Z",
+     "shell.execute_reply": "2025-07-24T15:25:17.857581Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:08.996410Z",
-     "iopub.status.busy": "2025-07-24T15:09:08.996212Z",
-     "iopub.status.idle": "2025-07-24T15:09:09.396487Z",
-     "shell.execute_reply": "2025-07-24T15:09:09.395922Z"
+     "iopub.execute_input": "2025-07-24T15:25:17.859889Z",
+     "iopub.status.busy": "2025-07-24T15:25:17.859720Z",
+     "iopub.status.idle": "2025-07-24T15:25:18.257785Z",
+     "shell.execute_reply": "2025-07-24T15:25:18.257274Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:09.398149Z",
-     "iopub.status.busy": "2025-07-24T15:09:09.397981Z",
-     "iopub.status.idle": "2025-07-24T15:09:09.682676Z",
-     "shell.execute_reply": "2025-07-24T15:09:09.682156Z"
+     "iopub.execute_input": "2025-07-24T15:25:18.259660Z",
+     "iopub.status.busy": "2025-07-24T15:25:18.259481Z",
+     "iopub.status.idle": "2025-07-24T15:25:18.546321Z",
+     "shell.execute_reply": "2025-07-24T15:25:18.545752Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:09.684301Z",
-     "iopub.status.busy": "2025-07-24T15:09:09.684134Z",
-     "iopub.status.idle": "2025-07-24T15:09:09.686261Z",
-     "shell.execute_reply": "2025-07-24T15:09:09.685831Z"
+     "iopub.execute_input": "2025-07-24T15:25:18.548029Z",
+     "iopub.status.busy": "2025-07-24T15:25:18.547839Z",
+     "iopub.status.idle": "2025-07-24T15:25:18.550420Z",
+     "shell.execute_reply": "2025-07-24T15:25:18.549828Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:09.687783Z",
-     "iopub.status.busy": "2025-07-24T15:09:09.687631Z",
-     "iopub.status.idle": "2025-07-24T15:09:09.690078Z",
-     "shell.execute_reply": "2025-07-24T15:09:09.689633Z"
+     "iopub.execute_input": "2025-07-24T15:25:18.551892Z",
+     "iopub.status.busy": "2025-07-24T15:25:18.551726Z",
+     "iopub.status.idle": "2025-07-24T15:25:18.554677Z",
+     "shell.execute_reply": "2025-07-24T15:25:18.554121Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:09.691536Z",
-     "iopub.status.busy": "2025-07-24T15:09:09.691383Z",
-     "iopub.status.idle": "2025-07-24T15:09:10.858881Z",
-     "shell.execute_reply": "2025-07-24T15:09:10.858349Z"
+     "iopub.execute_input": "2025-07-24T15:25:18.556264Z",
+     "iopub.status.busy": "2025-07-24T15:25:18.556097Z",
+     "iopub.status.idle": "2025-07-24T15:25:19.615752Z",
+     "shell.execute_reply": "2025-07-24T15:25:19.615132Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpI1YZMT\", R: \"/tmp/RtmpjzhISL\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmphuDVqq\", R: \"/tmp/RtmpSbNyez\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:10.860730Z",
-     "iopub.status.busy": "2025-07-24T15:09:10.860563Z",
-     "iopub.status.idle": "2025-07-24T15:09:11.297623Z",
-     "shell.execute_reply": "2025-07-24T15:09:11.296995Z"
+     "iopub.execute_input": "2025-07-24T15:25:19.617687Z",
+     "iopub.status.busy": "2025-07-24T15:25:19.617517Z",
+     "iopub.status.idle": "2025-07-24T15:25:20.031548Z",
+     "shell.execute_reply": "2025-07-24T15:25:20.030941Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:11.299414Z",
-     "iopub.status.busy": "2025-07-24T15:09:11.299221Z",
-     "iopub.status.idle": "2025-07-24T15:09:11.633015Z",
-     "shell.execute_reply": "2025-07-24T15:09:11.632409Z"
+     "iopub.execute_input": "2025-07-24T15:25:20.033227Z",
+     "iopub.status.busy": "2025-07-24T15:25:20.033059Z",
+     "iopub.status.idle": "2025-07-24T15:25:20.352735Z",
+     "shell.execute_reply": "2025-07-24T15:25:20.352193Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:11.634630Z",
-     "iopub.status.busy": "2025-07-24T15:09:11.634464Z",
-     "iopub.status.idle": "2025-07-24T15:09:11.641898Z",
-     "shell.execute_reply": "2025-07-24T15:09:11.641449Z"
+     "iopub.execute_input": "2025-07-24T15:25:20.354289Z",
+     "iopub.status.busy": "2025-07-24T15:25:20.354131Z",
+     "iopub.status.idle": "2025-07-24T15:25:20.361229Z",
+     "shell.execute_reply": "2025-07-24T15:25:20.360761Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:09:11.643405Z",
-     "iopub.status.busy": "2025-07-24T15:09:11.643219Z",
-     "iopub.status.idle": "2025-07-24T15:09:12.073780Z",
-     "shell.execute_reply": "2025-07-24T15:09:12.073155Z"
+     "iopub.execute_input": "2025-07-24T15:25:20.362679Z",
+     "iopub.status.busy": "2025-07-24T15:25:20.362517Z",
+     "iopub.status.idle": "2025-07-24T15:25:20.773962Z",
+     "shell.execute_reply": "2025-07-24T15:25:20.773367Z"
     }
    },
    "outputs": [
